--- a/deploy/crds/v2v_v1alpha1_virtualmachineimport_crd.yaml
+++ b/deploy/crds/v2v_v1alpha1_virtualmachineimport_crd.yaml
@@ -9,6 +9,10 @@ spec:
     listKind: VirtualMachineImportList
     plural: virtualmachineimports
     singular: virtualmachineimport
+    shortNames:
+    - vmimports
+    categories:
+    - all
   scope: Namespaced
   subresources:
     status: {}
