Allow specifying target VM name
Signed-off-by: Moti Asayag <masayag@redhat.com>

--- a/deploy/crds/v2v_v1alpha1_virtualmachineimport_cr.yaml
+++ b/deploy/crds/v2v_v1alpha1_virtualmachineimport_cr.yaml
@@ -4,6 +4,7 @@ metadata:
   name: example-virtualmachineimport
   namespace: example-ns
 spec:
+  targetVirtualMachineName: examplevm # The target name is optional. If not provided, the import will attempt to use the origin name of the VM or to normalize it.
   source:
     ovirt:  # represents ovirt-engine to import from the virtual machine
       providerCredentialsSecret: # A secret holding the access credentials to ovirt, see example ovirt-mapping-example.yaml
