Update ovirt secret example
Signed-off-by: Moti Asayag <masayag@redhat.com>

--- a/examples/ovirt-secret.yaml
+++ b/examples/ovirt-secret.yaml
@@ -5,7 +5,7 @@ metadata:
   name: my-secret-with-ovirt-credentials
 type: Opaque
 stringData:
-  config.yaml: |-
+  ovirt: |-
     apiUrl: "https://my.ovirt-engine-server/ovirt-engine/api/"
     username: admin@internal # provided in the format of username@domain
     password: 123456
