Fix permission of operator
Operator need access to virtualmachines and datavolumes.

Signed-off-by: Ondra Machacek <omachace@redhat.com>

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -60,3 +60,15 @@ rules:
   - resourcemappings
   verbs:
   - '*'
+- apiGroups:
+  - kubevirt.io
+  resources:
+  - 'virtualmachines'
+  verbs:
+  - '*'
+- apiGroups:
+  - cdi.kubevirt.io
+  resources:
+  - 'datavolumes'
+  verbs:
+  - '*'
