Add DiskMappings for specific disk mappings
DiskMappings will allow to map source VM disk to storage class.
A mapping for a disk overrides the mapping from  StorageMappings.

DiskMappings will fail to map the disk in the following cases:
* Disk ID/Name doesn't exist for the source VM (ID precedes name)
* Target storage class doesn't exist

DiskMappings.Source.Name should hold the disk alias.

DiskMappings.Source.ID should hold the ID of the disk and not the ID of
the disk-attachment that describes its association to the VM.

DiskMappings is optional, if not provided mappings will rely on
StorageMappings.

Signed-off-by: Moti Asayag <masayag@redhat.com>

--- a/deploy/crds/v2v_v1alpha1_virtualmachineimport_cr.yaml
+++ b/deploy/crds/v2v_v1alpha1_virtualmachineimport_cr.yaml
@@ -27,6 +27,16 @@ spec:
             target:
               name: pod
             type: pod
+        storageMappings:
+          - source:
+              name: storage_domain_1
+            target:
+              name: storage_class_1
+        diskMappings: # specifies per-disk placement on storage class
+          - source:
+              id: 8181ecc1-5db8-4193-9c92-3ddab3be7b05
+            target:
+              name: storage_class_1
 status:
   targetVmName: myvm # the name of the created virtual machine
   conditions:
