--- a/deploy/crds/v2v_v1alpha1_virtualmachineimport_crd.yaml
+++ b/deploy/crds/v2v_v1alpha1_virtualmachineimport_crd.yaml
@@ -90,6 +90,8 @@ spec:
                       type: array
                     storageMappings:
                       type: array
+                    diskMappings:
+                      type: array
         status:
           properties:
   version: v1alpha1
