Add permissions to finalizers of vm
Signed-off-by: Ondra Machacek <omachace@redhat.com>

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -64,6 +64,7 @@ rules:
   - kubevirt.io
   resources:
   - 'virtualmachines'
+  - 'virtualmachines/finalizers'
   - 'virtualmachineinstances'
   verbs:
   - '*'
