Add permissions for templates
Signed-off-by: Moti Asayag <masayag@redhat.com>

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -74,3 +74,15 @@ rules:
   - 'datavolumes'
   verbs:
   - '*'
+- apiGroups:
+  - template.openshift.io
+  resources:
+  - templates
+  verbs:
+  - 'get'
+- apiGroups:
+  - template.openshift.io
+  resources:
+  - processedtemplates
+  verbs:
+  - 'create'
