Added storage.k8s.io/storageclasses privileges to vm-import-operator cluster role
Signed-off-by: Jakub Dzon <jdzon@redhat.com>

--- a/deploy/cluster_role.yaml
+++ b/deploy/cluster_role.yaml
@@ -86,3 +86,11 @@ rules:
   - processedtemplates
   verbs:
   - 'create'
+- apiGroups:
+    - storage.k8s.io
+  resources:
+    - storageclasses
+  verbs:
+    - get
+    - list
+    - watch
