Installation steps update Updated installation instructions with information that installation has to be made to KubeVirt namespace Fixes #120
Signed-off-by: Jakub Dzon <jdzon@redhat.com>

--- a/deploy/cluster_role_binding.yaml
+++ b/deploy/cluster_role_binding.yaml
@@ -5,7 +5,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: vm-import-operator
-  namespace: REPLACE_NAMESPACE
+  namespace: REPLACE_KUBEVIRT_NAMESPACE
 roleRef:
   kind: ClusterRole
   name: vm-import-operator
