Add CSV Generator
CSV Generator is used to generated resoruces required for installation
and management of the operator.

Signed-off-by: Piotr Kliczewski <piotr.kliczewski@gmail.com>
Signed-off-by: Moti Asayag  <masayag@redhat.com>

--- a/manifests/vm-import-operator/v0.0.1/v2v_v1alpha1_virtualmachineimport_crd.yaml
+++ b/manifests/vm-import-operator/v0.0.1/v2v_v1alpha1_virtualmachineimport_crd.yaml
@@ -60,10 +60,10 @@ spec:
               description: 'StartVm defines if the VM should be started at the end of the import process'
               type: boolean
             source:
-              description: 'VirtualMachineImportSourceSpec defines the definition of the source provider and mapping resources'
+              description: 'VirtualMachineImportSourceSpec defines the source provider and the internal mapping resources
               properties:
                 ovirt:
-                  description: 'VirtualMachineImportOvirtSourceSpec defines the definition of the VM in oVirt'
+                  description: 'VirtualMachineImportOvirtSourceSpec defines how to identify the VM in oVirt'
                   properties:
                     vm:
                       description: 'VirtualMachineImportOvirtSourceVMSpec defines the identification of the VM in oVirt'
