Use vNIC Profile as source network mappings for oVirt
Source Network from oVirt can be mapped via vNIC Profiles to different
network attachment definition entities on KubeVirt.
Hence the semantic of the network mapping under 'ovirt' source of the
resource mappings is changed to support it.

ovirt.networkMappings.source.name expects the format of
'network-name/vnic-profile-name' and ovirt.networkMappings.source.name
expects the value of the vNIC Profile ID.

Signed-off-by: Moti Asayag <masayag@redhat.com>

--- a/examples/ovirt_resourcemapping_example_cr.yaml
+++ b/examples/ovirt_resourcemapping_example_cr.yaml
@@ -7,12 +7,12 @@ spec:
   ovirt:
     networkMappings:
       - source:
-          name: red # maps of ovirt logical network to network attachment definition
+          name: red/profile1  # maps of ovirt 'logic network/vnic profile' to network attachment definition
         target:
           name: xyz
         type: bridge
       - source:
-          name: ovirtmgmt
+          name: ovirtmgmt/ovirtmgmt
         target:
           name: pod
         type: pod
