--- a/tests/cirros/mapping.yml
+++ b/tests/cirros/mapping.yml
@@ -7,7 +7,7 @@ spec:
   ovirt:
     networkMappings:
       - source:
-          name: ovirtmgmt
+          name: ovirtmgmt/ovirtmgmt
         target:
           name: pod
         type: pod
