Allow user to override OS Map
In order to simplify deployment of the operator, and due to the fact
that OS map is part of the operator, the core OS Map is being embedded
to the operator's code.

In addition, in order to allow user to specify a custom OS map (to
extend or override core OS Map), the deployment of the operator
introduces two environment variables that will be used to identify the
user OS Map by name and namespace:
- OS_CONFIGMAP_NAME
- OS_CONFIGMAP_NAMESPACE

Signed-off-by: Moti Asayag <masayag@redhat.com>

--- a/examples/config_map.yaml
+++ b/examples/config_map.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: vmimport-os-mapper
-  namespace: {{NAMESPACE}}
+  namespace: kubevirt-hyperconverged
 data:
   guestos2common: |
     "Red Hat Enterprise Linux Server": "rhel"
