--- a/templates/vm-import-operator/VERSION/operator.yaml.in
+++ b/templates/vm-import-operator/VERSION/operator.yaml.in
@@ -150,3 +150,5 @@ spec:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
               value: "vm-import-operator"
+            - name: OS_CONFIGMAP_NAME
+            - name: OS_CONFIGMAP_NAMESPACE
