Adding k8s.cni.cncf.io/network-attachment-definitions privileges. Fixes #205
Signed-off-by: Jakub Dzon <jdzon@redhat.com>

--- a/manifests/vm-import-operator/v0.0.1/operator.yaml
+++ b/manifests/vm-import-operator/v0.0.1/operator.yaml
@@ -95,9 +95,17 @@ rules:
   verbs:
   - 'create'
 - apiGroups:
-    - storage.k8s.io
+  - storage.k8s.io
   resources:
-    - storageclasses
+  - storageclasses
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+    - k8s.cni.cncf.io
+  resources:
+    - network-attachment-definitions
   verbs:
     - get
     - list
