--- a/templates/vm-import-operator/VERSION/operator.yaml.in
+++ b/templates/vm-import-operator/VERSION/operator.yaml.in
@@ -103,6 +103,14 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - k8s.cni.cncf.io
+  resources:
+  - network-attachment-definitions
+  verbs:
+  - get
+  - list
+  - watch
 
 ---
 kind: ClusterRoleBinding
