--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ cache:
      - $GOPATH/pkg/mod
 
 before_install:
-  - curl -LO https://github.com/operator-framework/operator-sdk/releases/download/${RELEASE_VERSION}/operator-sdk-${RELEASE_VERSION}-x86_64-linux-gnu
-  - chmod +x operator-sdk-${RELEASE_VERSION}-x86_64-linux-gnu && sudo mkdir -p /usr/local/bin/ && sudo cp operator-sdk-${RELEASE_VERSION}-x86_64-linux-gnu /usr/local/bin/operator-sdk && rm operator-sdk-${RELEASE_VERSION}-x86_64-linux-gnu
+  - make all
 
 install:
-  - operator-sdk --verbose build quay.io/kubevirt/vm-import-opreator
+  - make docker-build
