Add vm description
We need to add vm desctiption as defined in BZ.

Bug-Url: https://bugzilla.redhat.com/1838683
Signed-off-by: Piotr Kliczewski <piotr.kliczewski@gmail.com>

--- a/examples/ovirt_virtualmachineimport_example_cr.yaml
+++ b/examples/ovirt_virtualmachineimport_example_cr.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: example-ns
   annotations:
     vmimport.v2v.kubevirt.io/progress: "20"
+    vmimport.v2v.kubevirt.io/propagate-annotations: "{'description': 'My description.'}"
   labels:
     vmimport.v2v.kubevirt.io/tracker: "vmimport-123"
 spec:
