--- a/examples/ovirt/secret.yaml
+++ b/examples/ovirt/secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: my-secret-with-ovirt-credentials
+  namespace: default
 type: Opaque
 stringData:
   ovirt: |
