--- a/examples/ovirt/vmimport-internal-mapping.yaml
+++ b/examples/ovirt/vmimport-internal-mapping.yaml
@@ -14,7 +14,7 @@ spec:
       vm:
         id: 80554327-0569-496b-bdeb-fcbbf52b827b
       mappings:
-        networkMapping:
+        networkMappings:
           - source:
               name: red/profile1 # maps of ovirt 'logic network/vnic profile' to network attachment definition
             target:
