--- a/version/description
+++ b/version/description
@@ -1,42 +1,5 @@
-v0.0.4
+v0.1.0
 
-Features:
-* CNV-5368: Failing import when template is not found and proper feature gate is not enabled
-* Propagate env variables to vm-import-controller
-* Check disk status before import
-* Refactor importDisks method
-* Remove non-cluster roles and rolebindings from cleanup logic
+Promotion of release v0.0.4 to v0.1.0.
 
-Tests:
-* Allow user to specify storage classes for tests Fixes #318
-* Using kubevirt install namespace passed in the test run arguments. Fixes #317
-* Add nfs storage to automation
-* Pinning kubevirtci version
-* Parallel import of two VMs functional test
-* Re-enabled assertion checking MAC address of the VM instance
-* Sequential import of two VMs functional tests
-* VM import CR removal after successful import - e2e test
-* Functional test for source VM that wouldn't go down
-* Running VM import functional test
-* Updated fakeovirt API dependency
-* Functional tests for failed resource mapping validation
-* Negative import test cases
-* Increased BeRunning matcher timeout and added meaningful information to the failure message
-
-Bugs:
-* Do not requeue new request if provider init failed
-* Allowing for VMs to have Windows-specific UTC-compatible timezonesFixes https://bugzilla.redhat.com/show_bug.cgi\?id\=1852446
-* Recover from oVirt client panic
-* Block import with more than one source network mapped to a pod network
-* Set PVC accessMode based on source VM
-* Network resource mapping type validation hardening
-* Using pod network type when type is missing in the mapping. Fixed #301
-* Make sure DVs od VM import are correct
-* DedicatedCPUPlacement should be set to true for exact pinning. Fixed #269
-
-Docs:
-* Update documentation
-* New various functional test cases definitions
-* New negative test cases descriptions
-* Update examples
-* Align namespace in examples
+No code changes.
