--- a/templates/vm-import-operator/VERSION/operator.yaml.in
+++ b/templates/vm-import-operator/VERSION/operator.yaml.in
@@ -16,7 +16,7 @@ spec:
     singular: vmimportconfig
   scope: Cluster
   versions:
-  - name: v1alpha1
+  - name: v1beta1
     served: true
     storage: true
     subresources:
