--- a/templates/vm-import-operator/VERSION/vmimportconfig_cr.yaml.in
+++ b/templates/vm-import-operator/VERSION/vmimportconfig_cr.yaml.in
@@ -1,5 +1,5 @@
 ---
-apiVersion: v2v.kubevirt.io/v1alpha1
+apiVersion: v2v.kubevirt.io/v1beta1
 kind: VMImportConfig
 metadata:
   name: vm-import-operator-config
