--- a/examples/ovirt/vmimport-external-mapping.yaml
+++ b/examples/ovirt/vmimport-external-mapping.yaml
@@ -1,4 +1,4 @@
-apiVersion: v2v.kubevirt.io/v1alpha1
+apiVersion: v2v.kubevirt.io/v1beta1
 kind: VirtualMachineImport
 metadata:
   name: vmimport-example
