--- a/templates/vm-import-operator/VERSION/operator.yaml.in
+++ b/templates/vm-import-operator/VERSION/operator.yaml.in
@@ -39,6 +39,7 @@ spec:
             description: VMImportConfigSpec defines the desired state of VMImportConfig
             properties:
               imagePullPolicy:
+                description: "Image pull policy. One of Always, Never, IfNotPresent. Defaults to Always if :latest tag is specified, or IfNotPresent otherwise. Cannot be updated. More info: https://kubernetes.io/docs/concepts/containers/images#updating-images"
                 enum:
                 - Always
                 - IfNotPresent
