--- a/version/description
+++ b/version/description
@@ -1,42 +1,26 @@
-v0.0.4
+v0.2.0
+
+Release v0.2.0
 
 Features:
-* CNV-5368: Failing import when template is not found and proper feature gate is not enabled
-* Propagate env variables to vm-import-controller
-* Check disk status before import
-* Refactor importDisks method
-* Remove non-cluster roles and rolebindings from cleanup logic
-
-Tests:
-* Allow user to specify storage classes for tests Fixes #318
-* Using kubevirt install namespace passed in the test run arguments. Fixes #317
-* Add nfs storage to automation
-* Pinning kubevirtci version
-* Parallel import of two VMs functional test
-* Re-enabled assertion checking MAC address of the VM instance
-* Sequential import of two VMs functional tests
-* VM import CR removal after successful import - e2e test
-* Functional test for source VM that wouldn't go down
-* Running VM import functional test
-* Updated fakeovirt API dependency
-* Functional tests for failed resource mapping validation
-* Negative import test cases
-* Increased BeRunning matcher timeout and added meaningful information to the failure message
-
-Bugs:
-* Do not requeue new request if provider init failed
-* Allowing for VMs to have Windows-specific UTC-compatible timezonesFixes https://bugzilla.redhat.com/show_bug.cgi\?id\=1852446
-* Recover from oVirt client panic
-* Block import with more than one source network mapped to a pod network
-* Set PVC accessMode based on source VM
-* Network resource mapping type validation hardening
-* Using pod network type when type is missing in the mapping. Fixed #301
-* Make sure DVs od VM import are correct
-* DedicatedCPUPlacement should be set to true for exact pinning. Fixed #269
+* Allow to import vms using i440fx bios
+* Use controller config to configure custom os mapping
+* Add pending condition
+* Enable SROIV
+* Introducing Controller Config
+* Add Valid condition warning when default storage class is about to be used
+* Extract common parts from the KubeVirt config support
+* Bump API to version v1beta1
+* Move to v1 apiextension API
+* Using direct server API client to get data before updating slices in status
+* Add support for block volumes
+* API-level validation for spec.targetVmName - max length: 63
+* Failing import when there are any problems related to DV creation
+* Shortening target VM name to 63 characters
+* Add reason of timeout error to tests
+* Add metric kubevirt_vmimport
+* Add Vmware Client
+* Restore source vm status when import cancelled
 
 Docs:
-* Update documentation
-* New various functional test cases definitions
-* New negative test cases descriptions
-* Update examples
-* Align namespace in examples
+* Update documentation to include VMware examples
