Add convertGuest step after importDisks, to launch virt-v2v job
Signed-off-by: Sam Lucidi <slucidi@redhat.com>

--- a/manifests/vm-import-operator/v0.2.1/vm-import-operator.0.2.1.clusterserviceversion.yaml
+++ b/manifests/vm-import-operator/v0.2.1/vm-import-operator.0.2.1.clusterserviceversion.yaml
@@ -148,6 +148,8 @@ spec:
                   value: v0.2.1
                 - name: CONTROLLER_IMAGE
                   value: quay.io/kubevirt/vm-import-controller:v0.2.1
+                - name: VIRTV2V_IMAGE
+                  value: quay.io/kubevirt/vm-import-virtv2v:v0.2.1
                 - name: PULL_POLICY
                   value: Always
                 - name: WATCH_NAMESPACE
