Add VIRTV2V_IMAGE to operator.yaml.in
Signed-off-by: Sam Lucidi <slucidi@redhat.com>

--- a/templates/vm-import-operator/VERSION/operator.yaml.in
+++ b/templates/vm-import-operator/VERSION/operator.yaml.in
@@ -201,6 +201,8 @@ spec:
               value: {{IMAGE_TAG}}
             - name: CONTROLLER_IMAGE
               value: {{CONTAINER_PREFIX}}/{{CONTROLLER_IMAGE}}:{{IMAGE_TAG}}
+            - name: VIRTV2V_IMAGE
+              value: {{CONTAINER_PREFIX}}/{{VIRTV2V_IMAGE}}:{{IMAGE_TAG}}
             - name: PULL_POLICY
               value: {{IMAGE_PULL_POLICY}}
             - name: MONITORING_NAMESPACE
