Add vSphere resource mapping documentation.
Signed-off-by: Sam Lucidi <slucidi@redhat.com>

--- a/examples/vmware/secret.yaml
+++ b/examples/vmware/secret.yaml
@@ -11,5 +11,5 @@ stringData:
     # Username provided in the format of username@domain.
     username: administrator@vsphere.local
     password: 123456
-    # The certificate thumbprint of the vCenter or ESXi host, in colon-separated hexidecimal octets.
+    # The SHA-1 certificate thumbprint of the vCenter or ESXi host, in colon-separated hexidecimal octets.
     thumbprint: 21:EA:74:11:59:89:5E:20:D5:D9:A2:39:5C:6A:2D:36:38:B2:52:2B
