--- a/examples/vmware/vmimport-external-mapping.yaml
+++ b/examples/vmware/vmimport-external-mapping.yaml
@@ -16,20 +16,26 @@ spec:
     vmware:
       vm:
         id: 42253ce0-5f76-918d-d85c-d7506f7cc056 # VirtualMachine UUID
+        # name: my-vm-name
       mappings: # mapping section overrides mapping rules provided by 'resourceMapping' external mapping resource
         networkMappings:
           - source:
-              name: VM Network
+              id: network-7 # Network Managed Object Reference
             target:
               name: pod
             type: pod
         storageMappings:
           - source:
-              id: datastore-13
+              name: iSCSI_Datastore # Datastore name
             target:
               name: storage_class_1
         diskMappings: # specifies per-disk placement on storage class
           - source:
               id: 421-2000 # VirtualDisk DiskObjectId or vDiskID
             target:
-              name: storage_class_1
+              name: storage_class_2
+
+# The VirtualMachine can be identified either by its UUID, or by its name. Its UUID can be retrieved
+# via the vSphere SDK, or from the vCenter Flash client. To find the UUID in the UI, find the Host
+# containing the VM you want, choose the VMs tab, and then right click on the columns.
+# From the dropdown choose "Show/Hide Columns", and then check the box for "UUID".
