--- a/version/description
+++ b/version/description
@@ -1,35 +1,14 @@
-v0.3.0
-
-Adds support for Warm Import of vSphere VMs.
+v0.3.1
 
 Features:
-* Base Dockerfiles on ubi/go-toolset:1.14.12
-* Update to CDI 1.27.0
-* Add support for Warm Import
-* Validate the target VM name
-* Pin gorilla/websocket to 1.4.2
-* Replace Kubevirt client with controller-runtime client in tests
-* Allow explicit AccessMode mapping in the oVirt provider
-* Add optional AccessMode to StorageResourceMappingItem
-* Add CreateVMSnapshot to Provider interface
+* Add annotation to retain the v2v pod after success
+* Propagate network annotations to DataVolumes
 
 Bugs:
-* sigs.k8s.io/controller-runtime/pkg/runtime/* packages are deprecated, and were moved to new pathes.
-* Don't stop VM for warm imports until finalization
-* Update Network Mapping validation for duplicates
-* Fix erroneous test failures caused by lingering resources
-* Throw a validation error if a VM with the given name exists
-* Requeque when VMI not yet created
-* Fix typo in VM validation for NUMA
-* vSphere: Gracefully shutdown vSphere VMs
-* vSphere: Don't add interfaces for unmapped networks
-* vSphere: find a desktop template if there are no server templates
-* vSphere: always map machine type to q35
-* vSphere: use VM UUID and disk key to name DataVolumes
-* vSphere: should look for a small template for the given OS first
-* oVirt: mapper should not set memory limits
-* oVirt: use 'scsi' bus for disks with the 'virtio_scsi' type
-
-Docs:
-* Add documentation for Access Mode and Volume Mode
-* Add vSphere resource mapping documentation.
+* Fix warm import finalization edge case
+* Validate that VMWare Tools are present
+* Use VMI UID instead of vSphere UUID to name DVs
+* Add overhead to requested size when creating DVs
+* Fail the import if the target VM is gone
+* Mount block devices properly on the virt-v2v container
+* Fail import when V2V overlays can't be committed.
